[WangZuowen]feat:complete html part of GitHub About

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,145 @@
-Hello
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About</title>
+</head>
+
+<body>
+    <header>
+        <img>
+        <input>
+        <a>
+            <p>Pull requests</p>
+        </a>
+        <a>
+            <p>Issues</p>
+        </a>
+        <a>
+            <p>Marketplace</p>
+        </a>
+        <a>
+            <p>Explore</p>
+        </a>
+    </header>
+    <div id="slogan">
+        <h3> GitHub is how people build software</h4>
+            <aside>
+                <h5>We’re supporting a community where more than 50 million* people learn, share, and work together to
+                    build software.
+        </h3>
+        </aside>
+    </div>
+    <div>
+        <div>
+            <span class="h2-mktg d-block mb-0">
+                October 2007
+            </span>
+            <span class="text-mono f5 text-gray">First commit</span>
+        </div>
+        <div>
+            <span class="h2-mktg d-block mb-0">
+                San Francisco
+            </span>
+            <span class="text-mono f5 text-gray">Headquarters</span>
+        </div>
+        <div>
+            <span class="h2-mktg d-block mb-0">
+                100 million*
+            </span>
+            <span class="text-mono f5 text-gray">Repositories hosted</span>
+        </div>
+        <p>* As of August 2019</p>
+        <p>We’re working hard to build a supportive, welcoming place for users and GitHubbers alike.
+            Learn more about our commitment to diversity and inclusion.</p>
+    </div>
+    <ol>
+        <li>
+            <p>Careers</p>
+            <p>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
+                think you will too.</p>
+        </li>
+        <li>
+            <p>Careers</p>
+            <p>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
+                think you will too.</p>
+        </li>
+        <li>
+            <p>Careers</p>
+            <p>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
+                think you will too.</p>
+        </li>
+        <li>
+            <p>Careers</p>
+            <p>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
+                think you will too.</p>
+        </li>
+        <li>
+            <p>Careers</p>
+            <p>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
+                think you will too.</p>
+        </li>
+        <li>
+            <p>Careers</p>
+            <p>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
+                think you will too.</p>
+        </li>
+        <li>
+            <p>Careers</p>
+            <p>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
+                think you will too.</p>
+        </li>
+    </ol>
+    <button></button>
+    <footer>
+        <div>
+            <p>GitHub</p>
+            <p>Subscribe to our newsletter</p>
+            <p>Get product updates, company news, and more.</p>
+            <button></button>
+        </div>
+        <div>
+            <div>
+                <p>Product</p>
+                <nav>Features</nav>
+                <nav>Security</nav>
+                <nav>Team</nav>
+                <nav>Enterprise</nav>
+                <nav>Customer stories</nav>
+                <nav>Pricing</nav>
+                <nav>Resources</nav>
+            </div>
+            <div>
+                <p>Platform</p>
+                <nav>Developer API</nav>
+                <nav>Partners</nav>
+                <nav>Atom</nav>
+                <nav>Electron</nav>
+                <nav>GitHub Desktop</nav>
+            </div>
+            <div>
+                <p>Surpport</p>
+                <nav>Help</nav>
+                <nav>Community Forum</nav>
+                <nav>Professional Services</nav>
+                <nav>Learning Lab</nav>
+                <nav>Status</nav>
+                <nav>Contact GitHub</nav>
+            </div>
+            <div>
+                <p>company</p>
+                <nav>About</nav>
+                <nav>Blog</nav>
+                <nav>Careers</nav>
+                <nav>Press</nav>
+                <nav>Social Impact</nav>
+                <nav>Shop</nav>
+            </div>
+        </div>
+
+    </footer>
+</body>
+
+</html>
