[WangZuowen]feat:add id for html element

--- a/public/index.html
+++ b/public/index.html
@@ -28,79 +28,74 @@
         <h3> GitHub is how people build software</h4>
             <aside>
                 <h5>We’re supporting a community where more than 50 million* people learn, share, and work together to
-                    build software.
+                    build software.</h5>
+                </aside>
         </h3>
-        </aside>
+        
     </div>
-    <div>
+    <div id="history">
         <div>
-            <span class="h2-mktg d-block mb-0">
+            <span>
                 October 2007
             </span>
-            <span class="text-mono f5 text-gray">First commit</span>
+            <span>First commit</span>
         </div>
         <div>
-            <span class="h2-mktg d-block mb-0">
+            <span>
                 San Francisco
             </span>
-            <span class="text-mono f5 text-gray">Headquarters</span>
+            <span>Headquarters</span>
         </div>
         <div>
-            <span class="h2-mktg d-block mb-0">
+            <span>
                 100 million*
             </span>
-            <span class="text-mono f5 text-gray">Repositories hosted</span>
+            <span>Repositories hosted</span>
         </div>
         <p>* As of August 2019</p>
         <p>We’re working hard to build a supportive, welcoming place for users and GitHubbers alike.
             Learn more about our commitment to diversity and inclusion.</p>
     </div>
-    <ol>
+    <ol id="features">
         <li>
-            <p>Careers</p>
-            <p>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
-                think you will too.</p>
+            <h2>Careers</h2>
+            <section>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
+                think you will too.</section>
         </li>
         <li>
-            <p>Careers</p>
-            <p>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
-                think you will too.</p>
+            <h2>Press</h2>
+            <section>Developers from all around the world are building amazing things together. Their story is our story.</section>
         </li>
         <li>
-            <p>Careers</p>
-            <p>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
-                think you will too.</p>
+            <h2>Blog</h2>
+            <section>Learn about the latest company info, new features, and general goings-on at GitHub.</section>
         </li>
         <li>
-            <p>Careers</p>
-            <p>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
-                think you will too.</p>
+            <h2>Leadership</h2>
+            <section>Meet the team leaders behind the world’s leading software development platform.</section>
         </li>
         <li>
-            <p>Careers</p>
-            <p>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
-                think you will too.</p>
+            <h2>GitHub Status</h2>
+            <section>We continuously monitor the status of github.com and all its related services. If there are any interruptions in service, a note will be posted here.</section>
         </li>
         <li>
-            <p>Careers</p>
-            <p>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
-                think you will too.</p>
+            <h2>Milestones</h2>
+            <section>A timeline of significant moments in GitHub's history.</section>
         </li>
         <li>
-            <p>Careers</p>
-            <p>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
-                think you will too.</p>
-        </li>
+            <h2>Social Impact</h2>
+            <section>Learn about how GitHub’s people, products, and platform are creating positive and lasting change around the world.</section>
+        </li>   
     </ol>
     <button></button>
     <footer>
-        <div>
+        <div id="leftFooter">
             <p>GitHub</p>
             <p>Subscribe to our newsletter</p>
             <p>Get product updates, company news, and more.</p>
             <button></button>
         </div>
-        <div>
+        <div id="rightFooter">
             <div>
                 <p>Product</p>
                 <nav>Features</nav>
