[WangZuowen]feat:complete css part

--- a/public/index.html
+++ b/public/index.html
@@ -4,34 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./contents/main.css">
+    <link rel="mask-icon" href="https://github.githubassets.com/pinned-octocat.svg" color="#000000">
+    <link rel="alternate icon" class="js-site-favicon" type="image/png"
+        href="https://github.githubassets.com/favicons/favicon.png">
+    <link rel="icon" class="js-site-favicon" type="image/svg+xml"
+        href="https://github.githubassets.com/favicons/favicon.svg">
     <title>About</title>
 </head>
 
 <body>
     <header>
-        <img>
-        <input>
-        <a>
-            <p>Pull requests</p>
-        </a>
-        <a>
-            <p>Issues</p>
-        </a>
-        <a>
-            <p>Marketplace</p>
-        </a>
-        <a>
-            <p>Explore</p>
-        </a>
+        <span>
+            <svg id="logo"></svg>
+        </span>
+        <label>
+            <input type="text" placeholder="Search or jump to…">
+            <img src="https://github.githubassets.com/images/search-key-slash.svg">
+        </label>
+        <nav>
+            <a>
+                Pull requests
+            </a>
+            <a>
+                Issues
+            </a>
+            <a>
+                Marketplace
+            </a>
+            <a>
+                Explore
+            </a>
+        </nav>
+        <summary>
+            <svg viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"></svg>
+            <span></span>
+        </summary>
     </header>
     <div id="slogan">
-        <h3> GitHub is how people build software</h4>
-            <aside>
-                <h5>We’re supporting a community where more than 50 million* people learn, share, and work together to
-                    build software.</h5>
-                </aside>
-        </h3>
-        
+        <span>
+            <h1>GitHub</h1>
+            <h3>
+                is how people build software
+            </h3>
+        </span>
+
+        <aside>
+            <p>We're supporting a community where more than 50 million* people</p>
+            <p>learn, share, and work together to build software.</p>
+        </aside>
     </div>
     <div id="history">
         <div>
@@ -52,48 +73,63 @@
             </span>
             <span>Repositories hosted</span>
         </div>
-        <p>* As of August 2019</p>
-        <p>We’re working hard to build a supportive, welcoming place for users and GitHubbers alike.
-            Learn more about our commitment to diversity and inclusion.</p>
+        <p id="small">*As of August 2019</p>
+        <p>We're working hard to build a supportive, welcoming place for users and
+            GitHubbers alike.<br><a href="/about/diversity">Learn more about our commitment to
+                diversity and inclusion</a>.</p>
     </div>
-    <ol id="features">
-        <li>
+    <div id="featuresDiv">
+        <ol id="features">
+        <li class="featuresLi">
             <h2>Careers</h2>
-            <section>Come help us make collaboration even better. We’ve built a company we truly love working for, and we
+            <section>Come help us make collaboration even better. We’ve built a company we truly love working for, and
+                we
                 think you will too.</section>
         </li>
-        <li>
+        <li class="featuresLi">
             <h2>Press</h2>
-            <section>Developers from all around the world are building amazing things together. Their story is our story.</section>
+            <section>Developers from all around the world are building amazing things together. Their story is our
+                story.</section>
         </li>
-        <li>
+        <li class="featuresLi">
             <h2>Blog</h2>
             <section>Learn about the latest company info, new features, and general goings-on at GitHub.</section>
         </li>
-        <li>
+        <li class="featuresLi">
             <h2>Leadership</h2>
             <section>Meet the team leaders behind the world’s leading software development platform.</section>
         </li>
-        <li>
+        <li id="shortLi">
             <h2>GitHub Status</h2>
-            <section>We continuously monitor the status of github.com and all its related services. If there are any interruptions in service, a note will be posted here.</section>
+            <section>We continuously monitor the status of github.com and all its related services. If there are any
+                interruptions in service, a note will be posted here.</section>
         </li>
-        <li>
+        <li class="featuresLi">
             <h2>Milestones</h2>
             <section>A timeline of significant moments in GitHub's history.</section>
         </li>
-        <li>
+        <li class="featuresLi">
             <h2>Social Impact</h2>
-            <section>Learn about how GitHub’s people, products, and platform are creating positive and lasting change around the world.</section>
-        </li>   
+            <section>Learn about how GitHub’s people, products, and platform are creating positive and lasting change
+                around the world.</section>
+        </li>
     </ol>
-    <button></button>
+    <hr>
+    </div>
+        
+    <div id="link">
+        <a href="https://www.twitter.com/github"
+            data-ga-click="About, follow us on Twitter, style:button; location:centered">
+            <img src="https://github.githubassets.com/images/icons/twitter.png" width="32"
+                height="32" alt="Twitter logo"> Follow us on Twitter
+        </a>
+    </div>
     <footer>
         <div id="leftFooter">
-            <p>GitHub</p>
-            <p>Subscribe to our newsletter</p>
-            <p>Get product updates, company news, and more.</p>
-            <button></button>
+            <h1>GitHub</h1>
+            <p id="upItem">Subscribe to our newsletter</p>
+            <p id="downItem">Get product updates, company news, and more.</p>
+            <button type="submit">Subscibe</button>
         </div>
         <div id="rightFooter">
             <div>
